# bazel-boilerplate

./: .bazelrc  .gitignore  README.md  WORKSPACE.bazel
src/python/bar/: BUILD.bazel  bar.py  bar_test.py
src/python/foo/: BUILD.bazel  foo.py  foo_test.py
