load("@rules_python//python:defs.bzl", "py_library", "py_test")
load("@pypi_deps//:requirements.bzl", "requirement")

py_library(
  name = "bar",
  visibility = ["//visibility:public"],
  srcs = glob(["*.py"], exclude=["*_test.py"]),
  deps = [
    requirement("numpy"),
  ],
  srcs_version = "PY3",
)

py_test(
  name = "bar_test",
  srcs = glob(["*_test.py"]),
  deps = [
    ":bar",
  ],
  srcs_version = "PY3",
)
